smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/missing-space-after-structure.smithy
// Syntax error at line 5, column 1: Unknown shape type: structureFoo | Model
$version: "2.0"
namespace smithy.example

structureFoo{}
